[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/entities/level/assets/SpritesSheet_Tiles.png" type="Texture" id=1]
[ext_resource path="res://game/entities/frog/Frog.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/entities/row/Row.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/entities/entities/WinZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/screens/Level.gd" type="Script" id=9]
[ext_resource path="res://game/screens/Menus/HUDBottom.tscn" type="PackedScene" id=10]
[ext_resource path="res://theme_assets/OptionB_SuperstarMemesbruh03.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://game/screens/Homes.gd" type="Script" id=12]
[ext_resource path="res://game/screens/Rows.gd" type="Script" id=13]

[sub_resource type="TileSet" id=1]
0/name = "grass_bottom.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "SpritesSheet_Tiles.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "SpritesSheet_Tiles.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "SpritesSheet_Tiles.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "SpritesSheet_Tiles.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 32, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "grass_top.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 96, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "road_bottom.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 80, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "road_top"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 48, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "road_on.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 64, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "SpritesSheet_Tiles.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 32, 0, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "SpritesSheet_Tiles.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 48, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "SpritesSheet_Tiles.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 0, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "SpritesSheet_Tiles.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 80, 0, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "SpritesSheet_Tiles.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 96, 0, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "SpritesSheet_Tiles.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 112, 0, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "SpritesSheet_Tiles.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 32, 16, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "SpritesSheet_Tiles.png 16"
16/texture = ExtResource( 1 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 48, 16, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "SpritesSheet_Tiles.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 64, 16, 16, 16 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "SpritesSheet_Tiles.png 18"
18/texture = ExtResource( 1 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 80, 16, 16, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "SpritesSheet_Tiles.png 19"
19/texture = ExtResource( 1 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 96, 16, 16, 16 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "SpritesSheet_Tiles.png 20"
20/texture = ExtResource( 1 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 112, 16, 16, 16 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "SpritesSheet_Tiles.png 21"
21/texture = ExtResource( 1 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 96, 112, 16, 16 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "SpritesSheet_Tiles.png 22"
22/texture = ExtResource( 1 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 112, 112, 16, 16 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "SpritesSheet_Tiles.png 23"
23/texture = ExtResource( 1 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 112, 96, 16, 16 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.5, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 57 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 56 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 55 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 11 )

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = ExtResource( 11 )

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 16.0
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 8, 0 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 0, 0, 65539, 1, 0, 65540, 0, 0, 65541, 0, 0, 65542, 1, 0, 65543, 0, 0, 65544, 0, 0, 65545, 1, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 0, 0, 196607, 2, 0, 131072, 3, 0, 131073, 2, 0, 131074, 2, 0, 131075, 3, 0, 131076, 2, 0, 131077, 2, 0, 131078, 3, 0, 131079, 2, 0, 131080, 2, 0, 131081, 3, 0, 131082, 2, 0, 131083, 2, 0, 131084, 3, 0, 131085, 2, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 393215, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 458751, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 524287, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 589823, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 655359, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 720895, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 851967, 6, 0, 786432, 6, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 6, 0, 786437, 6, 0, 786438, 6, 0, 786439, 6, 0, 786440, 6, 0, 786441, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0 )

[node name="Rows" type="Node2D" parent="TileMap"]
position = Vector2( -16, 0 )
script = ExtResource( 13 )

[node name="Row" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 200 )
content = [ PoolIntArray( -1, -1, -1, -1, -1, 0, -1, -1, -1, -1, -1, 0, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, -1, -1, 0, -1, -1, -1, 0, -1, -1, -1, -1, 0, -1, -1, -1, -1, 0, -1 ), PoolIntArray( 0, -1, -1, -1, 0, -1, -1, -1, 0, -1, -1, -1, 0, -1, -1, -1, 0, -1, -1, -1 ), PoolIntArray( 0, -1, -1, 0, -1, -1, -1, 0, -1, -1, 0, -1, -1, -1, 0, -1, -1, 0, -1, -1 ), PoolIntArray( 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1 ) ]

[node name="Row2" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( 312, 184 )
rotation = 3.14159
scale = Vector2( 1, -1 )
H_VELOCITY = PoolRealArray( 10, 15, 15, 15, 15 )
targets = 4
content = [ PoolIntArray( 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1 ), PoolIntArray( 1, 1, -1, -1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, -1 ), PoolIntArray( 1, 1, -1, -1, 1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1 ), PoolIntArray( -1, -1, 1, 1, -1, -1, -1, 1, -1, -1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1 ), PoolIntArray( 1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, -1, -1 ) ]

[node name="Row3" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 168 )
H_VELOCITY = PoolRealArray( 10, 8, 8, 10, 15 )
targets = 4
content = [ PoolIntArray( -1, -1, -1, -1, 0, -1, -1, -1, -1, -1, -1, -1, 0, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, 0, -1, -1, -1, -1, -1, -1, 0, -1, -1, -1, -1, -1, 0, -1, -1, -1, -1 ), PoolIntArray( -1, -1, 0, -1, 0, -1, -1, -1, -1, -1, 0, -1, 0, -1, -1, -1, -1, 0, -1, 0 ), PoolIntArray( -1, -1, 0, -1, 0, -1, -1, 0, -1, 0, -1, -1, 0, -1, 0, -1, -1, 0, -1, 0 ), PoolIntArray( -1, -1, 0, -1, 0, -1, -1, 0, -1, 0, -1, -1, 0, -1, 0, -1, -1, 0, -1, 0 ) ]

[node name="Row4" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( 312, 152 )
rotation = 3.14159
scale = Vector2( 1, -1 )
H_VELOCITY = PoolRealArray( 20, 40, 50, 60, 60 )
targets = 4
content = [ PoolIntArray( 2, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( 2, -1, -1, 2, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( 2, -1, -1, -1, -1, -1, -1, -1, -1, -1, 2, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( 2, -1, -1, 2, -1, -1, -1, -1, -1, -1, 2, -1, -1, 2, -1, -1, -1, -1, -1, -1 ), PoolIntArray( 2, -1, -1, -1, -1, 2, -1, -1, -1, -1, 2, -1, -1, -1, -1, 2, -1, -1, -1, -1 ) ]

[node name="Row5" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 136 )
targets = 4
content = [ PoolIntArray( 3, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, -1, -1 ), PoolIntArray( 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, -1, -1 ), PoolIntArray( 3, -1, -1, -1, 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, 3, -1, -1, -1, -1 ), PoolIntArray( 3, -1, -1, -1, 3, -1, -1, -1, -1, -1, -1, 3, -1, -1, -1, 3, -1, -1, -1, -1 ) ]

[node name="Row7" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 120 )
H_VELOCITY = PoolRealArray( 0, 0, 0, 0, 0 )
content = [ PoolIntArray( -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, -1, -1, -1, -1, -1, -1, 11, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 ), PoolIntArray( -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 11, -1, -1, -1, -1, -1, -1, -1, -1, -1 ) ]

[node name="Row8" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 104 )
H_VELOCITY = PoolRealArray( -20, -20, -25, -30, -30 )
targets = 3
content = [ PoolIntArray( 4, 4, 4, 10, 5, 5, 5, 10, 4, 4, 4, 10, 4, 4, 4, 10, 4, 4, 4, 10 ), PoolIntArray( 4, 4, 4, 10, 5, 5, 5, 10, 10, 10, 4, 4, 4, 10, 10, 4, 4, 4, 10, 10 ), PoolIntArray( 5, 5, 5, 10, 10, 4, 4, 4, 10, 10, 4, 4, 4, 10, 10, 10, 10, 10, 10, 10 ), PoolIntArray( 5, 5, 5, 10, 10, 10, 4, 4, 4, 10, 10, 10, 5, 5, 10, 4, 4, 10, 10, 10 ), PoolIntArray( 5, 5, 5, 10, 10, 10, 4, 4, 4, 10, 10, 10, 5, 5, 5, 10, 10, 10, 10, 10 ) ]

[node name="Row9" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 88 )
targets = 3
content = [ PoolIntArray( 7, -1, -1, 10, 10, 7, -1, -1, 10, 10, 7, -1, -1, 10, 10, 7, -1, -1, 10, 10 ), PoolIntArray( 7, -1, -1, 10, 10, 7, -1, -1, 10, 10, 10, 7, -1, -1, 10, 10, 10, 10, 10, 10 ), PoolIntArray( 7, -1, -1, 10, 7, -1, -1, 10, 10, 10, 10, 7, -1, -1, 10, 10, 10, 10, 10, 10 ), PoolIntArray( 7, -1, -1, 10, 10, 7, 11, -1, 10, 10, 10, 10, 10, 7, 11, -1, 10, 10, 10, 10 ), PoolIntArray( 7, -1, -1, 10, 10, 10, 10, 7, 11, -1, 10, 10, 10, 7, -1, -1, 10, 10, 10, 10 ) ]

[node name="Row10" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 72 )
H_VELOCITY = PoolRealArray( 15, 15, 15, 15, 18 )
targets = 3
content = [ PoolIntArray( 9, -1, -1, -1, -1, 10, 10, 9, -1, -1, -1, -1, 10, 10, 9, -1, -1, -1, -1, 10 ), PoolIntArray( 9, -1, -1, -1, -1, 10, 10, 8, -1, -1, -1, 10, 10, 9, -1, -1, -1, -1, 10, 10 ), PoolIntArray( 9, -1, -1, -1, -1, 10, 10, 10, 10, 10, 9, -1, -1, -1, -1, 10, 10, 10, 10, 10 ), PoolIntArray( 10, 10, 9, -1, -1, -1, -1, 10, 10, 10, 10, 10, 7, -1, -1, 10, 10, 10, 10, 10 ), PoolIntArray( 8, -1, -1, -1, 10, 10, 10, 10, 10, 10, 10, 10, 8, -1, -1, -1, 10, 10, 10, 10 ) ]

[node name="Row11" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 56 )
H_VELOCITY = PoolRealArray( -10, -12, -14, -18, -20 )
targets = 3
content = [ PoolIntArray( 5, 5, 10, 4, 4, 10, 4, 4, 10, 4, 4, 10, 4, 4, 10, 10, 4, 4, 10, 10 ), PoolIntArray( 4, 4, 10, 10, 5, 5, 10, 10, 4, 4, 10, 10, 4, 4, 10, 10, 5, 5, 10, 10 ), PoolIntArray( 4, 4, 10, 10, 10, 4, 4, 10, 10, 10, 5, 5, 10, 10, 10, 4, 4, 10, 10, 10 ), PoolIntArray( 5, 5, 10, 10, 10, 4, 4, 10, 10, 10, 10, 4, 4, 10, 10, 10, 10, 10, 10, 10 ), PoolIntArray( 5, 5, 10, 10, 10, 10, 4, 4, 10, 10, 5, 5, 10, 10, 10, 10, 4, 4, 10, 10 ) ]

[node name="Row12" parent="TileMap/Rows" instance=ExtResource( 4 )]
position = Vector2( -72, 40 )
H_VELOCITY = PoolRealArray( 10, 10, 10, 10, 8 )
targets = 3
content = [ PoolIntArray( 8, -1, -1, -1, 10, 8, -1, -1, -1, 10, 8, -1, -1, -1, 10, 8, -1, -1, -1, 10 ), PoolIntArray( 7, -1, -1, 10, 6, -1, -1, 10, 10, 10, 10, 10, 8, -1, -1, -1, 10, 10, 10, 10 ), PoolIntArray( 8, -1, -1, -1, 10, 10, 10, 8, -1, -1, -1, 10, 10, 10, 6, -1, -1, 10, 10, 10 ), PoolIntArray( 7, -1, -1, 10, 6, -1, -1, 10, 10, 10, 6, -1, -1, 10, 7, -1, -1, 10, 10, 10 ), PoolIntArray( 8, -1, -1, -1, 10, 10, 10, 10, 6, -1, -1, 10, 10, 6, -1, -1, 10, 10, 10, 10 ) ]

[node name="Homes" type="Node2D" parent="TileMap"]
script = ExtResource( 12 )

[node name="WinZones" type="Node" parent="TileMap/Homes"]

[node name="WinZone5" parent="TileMap/Homes/WinZones" instance=ExtResource( 7 )]
position = Vector2( 208, 40 )

[node name="WinZone4" parent="TileMap/Homes/WinZones" instance=ExtResource( 7 )]
position = Vector2( 160, 40 )

[node name="WinZone" parent="TileMap/Homes/WinZones" instance=ExtResource( 7 )]
position = Vector2( 16, 40 )

[node name="WinZone2" parent="TileMap/Homes/WinZones" instance=ExtResource( 7 )]
position = Vector2( 64, 40 )

[node name="WinZone3" parent="TileMap/Homes/WinZones" instance=ExtResource( 7 )]
position = Vector2( 112, 40 )

[node name="TimerTrap" type="Timer" parent="TileMap/Homes"]
one_shot = true

[node name="Frog" parent="." instance=ExtResource( 2 )]
position = Vector2( 104, 216 )

[node name="Limits" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 4, 224 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]
position = Vector2( 103.5, 7.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limits"]
position = Vector2( -12, -56 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Limits"]
position = Vector2( 224, -56 )
shape = SubResource( 4 )

[node name="DeathZone" type="Area2D" parent="."]
visible = false
position = Vector2( 4, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionLeft" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( -16, 56 )
shape = SubResource( 6 )

[node name="CollisionRight" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 228, 56 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 36, 20 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 84, 20 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 132, 20 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 180, 20 )
shape = SubResource( 7 )

[node name="InitialPosition" type="Position2D" parent="."]
position = Vector2( 104, 216 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -16 )
anchor_mode = 0
current = true

[node name="HUDBottom" parent="." instance=ExtResource( 10 )]
anchor_top = 1.0
margin_top = -32.0
margin_bottom = -16.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoLabel" type="Label" parent="CenterContainer"]
visible = false
margin_left = 90.0
margin_top = 117.0
margin_right = 133.0
margin_bottom = 138.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "GAME OVER"

[node name="Timer" type="Timer" parent="CenterContainer"]
wait_time = 2.0
one_shot = true

[connection signal="first_time_reached" from="TileMap/Rows/Row" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row2" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row3" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row4" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row5" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row7" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row8" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row9" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row10" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row11" to="." method="_on_Row_first_time_reached"]
[connection signal="first_time_reached" from="TileMap/Rows/Row12" to="." method="_on_Row_first_time_reached"]
[connection signal="timeout" from="TileMap/Homes/TimerTrap" to="TileMap/Homes" method="_on_Timer_timeout"]
[connection signal="life_lost" from="Frog" to="." method="_on_Frog_life_lost"]
[connection signal="target_reached" from="Frog" to="." method="_on_Frog_target_reached"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="timeout" from="HUDBottom" to="." method="_on_HUDBottom_timeout"]
[connection signal="timeout" from="CenterContainer/Timer" to="." method="_on_Timer_timeout"]
